kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: ephemeral-kafka
spec:
  ports:
  - port: 9092
    protocol: TCP
  selector:
    service: kafka
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kafka
  namespace: ephemeral-kafka
spec:
  replicas: 2
  template:
    metadata:
      labels:
        service: kafka
    spec:
      containers:
      - env:
        - name: KAFKA_ADVERTISED_PORT
          value: "9092"
        - name: KAFKA_ZOOKEEPER_CONNECT
          value: zookeeper-svc:2181
        - name: KAFKA_ADVERTISED_HOST_NAME
          valueFrom:
              fieldRef:
                fieldPath: status.podIP
        image: wurstmeister/kafka:0.10.2.0-1
        name: kafka
        ports:
        - containerPort: 9092
          protocol: TCP
      restartPolicy: Always
