zipkin-mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-mysql-svc
  namespace: tracing
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    service: zipkin-mysql
---
apiVersion: v1
kind: Pod
metadata:
  name: zipkin-mysql
  namespace: tracing
  annotations:
    scheduler.alpha.kubernetes.io/critical-pod: ""
  labels:
    service: zipkin-mysql
spec:
  containers:
    - name: mysql
      image: mysql:5.7
      ports:
        - name: client
          containerPort: 3306
          protocol: "TCP"
      volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-data
      hostPath:
        path: /var/lib/data/myslq/zipkin
